--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-users-permissions": "4.11.5",
     "@strapi/provider-upload-cloudinary": "^4.11.5",
     "@strapi/strapi": "4.11.5",
+    "npm": "^9.8.0",
     "pg": "8.8.0"
   },
   "author": {
